// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="default"
/>
`;

exports[`Render properties.list.icon - value[0] 1`] = `
.emotion-2 {
  padding-right: 8px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.list.icon_0_icon"
        />
        label 1
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.list.icon_1_icon"
        />
        label 2
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.icon with onClick - value[0] 1`] = `
.emotion-1 {
  cursor: pointer;
}

.emotion-2 {
  padding-right: 8px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon with onClick"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.list.icon with onClick_0_icon"
        />
        label 1
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.list.icon with onClick_1_icon"
        />
        label 2
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.label strings - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.label strings"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page One
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page two
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-/page1"
        href="/page1"
      >
        page1
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-/page2"
        href="/page2"
      >
        page2
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId label and url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId label and url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-/page1"
        href="/page1"
      >
        page1
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-https://www.url.com"
        href="https://www.url.com"
      >
        label url
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-/page2"
        href="/page2"
      >
        label pageId
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-/page3"
        href="/page3"
      >
        page3
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        label4
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.style - value[0] 1`] = `
.emotion-1 {
  color: blue;
}

.emotion-2 {
  color: red;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.style"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page One
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-2"
      >
        Page two
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-https://www.url.com"
        href="https://www.url.com"
      >
        https://www.url.com
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-https://docs.url.com"
        href="https://docs.url.com"
      >
        https://docs.url.com
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.separator - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.separator"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page One
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page two
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
</div>
`;

exports[`Render properties.style: fontSize: 18 - value[0] 1`] = `
.emotion-0 {
  font-size: 18px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.style: fontSize: 18"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page One
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <span
        class="emotion-1"
      >
        Page two
      </span>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.list.icon 1`] = `true`;

exports[`Test Schema properties.list.icon 2`] = `null`;

exports[`Test Schema properties.list.icon with onClick 1`] = `true`;

exports[`Test Schema properties.list.icon with onClick 2`] = `null`;

exports[`Test Schema properties.list.label strings 1`] = `true`;

exports[`Test Schema properties.list.label strings 2`] = `null`;

exports[`Test Schema properties.list.pageId 1`] = `true`;

exports[`Test Schema properties.list.pageId 2`] = `null`;

exports[`Test Schema properties.list.pageId label and url 1`] = `true`;

exports[`Test Schema properties.list.pageId label and url 2`] = `null`;

exports[`Test Schema properties.list.style 1`] = `true`;

exports[`Test Schema properties.list.style 2`] = `null`;

exports[`Test Schema properties.list.url 1`] = `true`;

exports[`Test Schema properties.list.url 2`] = `null`;

exports[`Test Schema properties.separator 1`] = `true`;

exports[`Test Schema properties.separator 2`] = `null`;

exports[`Test Schema properties.style: fontSize: 18 1`] = `true`;

exports[`Test Schema properties.style: fontSize: 18 2`] = `null`;
